# BAAS-

./: project_help.txt
bass_go/: .env  go.mod  main.go
bass_go/project/handlers/: project_handler.go
bass_go/project_config_handlers/: project_config_api_handler.go  project_handler.go
bass_go/project_config_models/: project_model.go
bass_rust/: .env  Cargo.toml
bass_rust/src/: config_db.rs  main.rs  model.rs  routes.rs
